# lm_client

./: .gitignore  Cargo.toml  README.md  todo.md
.github/workflows/: build-linux.yml
default_workspace/queries/: clear_vectors.sql  drop_data.sql  initial_config.sql
framework/: Cargo.toml
framework/src/: context.rs  lib.rs
modules/api/: Cargo.toml
modules/api/src/: lib.rs  open_ai_api.rs
modules/database/: Cargo.toml
modules/database/src/: lib.rs
modules/database/src/databases/: conversations.rs  messages.rs  mod.rs  presets.rs  providers.rs  storage.rs  vector.rs
modules/database/src/utils/: common.rs  mod.rs
modules/services/: Cargo.toml
modules/services/src/: app_settings.rs  conversations.rs  lib.rs  messaging.rs  presets.rs  vector.rs
modules/types/: Cargo.toml
modules/types/src/: common.rs  lib.rs
modules/types/src/dto/: conversation.rs  message.rs  mod.rs  preset.rs  provider.rs  rag.rs
modules/utils/: Cargo.toml
modules/utils/src/: common.rs  constants.rs  event_system.rs  focus_manager.rs  lib.rs  notify.rs  selection.rs
modules/utils/src/migration_14/: iced_font_awesome.rs  mod.rs  subscription.rs
scripts/: build-bundle.sh  build-mac-arm.sh  create_component.sh  fix.sh  lint.sh  print-installed-targets.sh  run-debug.sh  run-events.sh  sign-apple.sh
src/: main.rs
src/app/: app_state.rs  app_subscription.rs  app_update.rs  app_view.rs  mod.rs
src/app/common/: mod.rs
src/app/common/markdown_viewer/: markdown_viewer_state.rs  markdown_viewer_subscription.rs  markdown_viewer_update.rs  markdown_viewer_view.rs  mod.rs
src/app/common/model_picker/: mod.rs  model_picker_state.rs  model_picker_subscription.rs  model_picker_update.rs  model_picker_view.rs
src/app/conversations/: conversations_state.rs  conversations_subscription.rs  conversations_update.rs  conversations_view.rs  mod.rs
src/app/conversations/chat/: chat_state.rs  chat_subscription.rs  chat_update.rs  chat_view.rs  chat_view_messages.rs  chat_view_texteditor.rs  mod.rs
src/app/conversations/chat/message_viewer/: message_viewer_state.rs  message_viewer_subscription.rs  message_viewer_update.rs  message_viewer_view.rs  mod.rs
src/app/conversations/folders/: folders_state.rs  folders_subscription.rs  folders_update.rs  folders_view.rs  mod.rs
src/app/conversations/folders/tree_node/: mod.rs  tree_node_state.rs  tree_node_subscription.rs  tree_node_update.rs  tree_node_view.rs
src/app/conversations/settings/: mod.rs  settings_state.rs  settings_subscription.rs  settings_update.rs  settings_view.rs
src/app/conversations/settings/basic/: basic_state.rs  basic_subscription.rs  basic_update.rs  basic_view.rs  mod.rs
src/app/conversations/settings/rag/: mod.rs  rag_state.rs  rag_subscription.rs  rag_update.rs  rag_view.rs
src/app/conversations/settings/summary/: mod.rs  summary_state.rs  summary_subscription.rs  summary_update.rs  summary_view.rs
src/app/presets/: mod.rs  presets_state.rs  presets_subscription.rs  presets_update.rs  presets_view.rs
src/app/settings/: mod.rs  settings_state.rs  settings_subscription.rs  settings_update.rs  settings_view.rs
src/app/settings/providers_settings/: mod.rs  providers_settings_state.rs  providers_settings_subscription.rs  providers_settings_update.rs  providers_settings_view.rs
src/overrides/: list.rs  markdown.rs  mod.rs  rich.rs  selectable_rich.rs  selectable_text.rs  table.rs
src/theme/: dark_theme.rs  mod.rs  styles.rs
src/widgets/: button.rs  collapsible.rs  context_menu.rs  icon.rs  icon_button.rs  input.rs  mod.rs
src/widgets/dragging_placeholder/: dragging_placeholder_overlay.rs  dragging_placeholder_widget.rs  mod.rs
