[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
rusqlite = { version = "0.34.0", features = ["bundled"]}
sqlite-vec = "0.1.6"
zerocopy = "0.8.25"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }

types.workspace = true

[features]
default = []
databases-access = []

[lints]
workspace = true