[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { workspace = true }
native-dialog = { version = "0.8.11", features = ["async"] }
uuid = { version = "1.16.0", features = ["v4"] }
unicode-segmentation = "1.12.0"
serde = { version = "1.0.219" }
serde_json = "1.0.140"

types.workspace = true

[lints]
workspace = true